<resources>
    <string name="app_name">Lazada</string>
    <string name="title_splash_0">Thế giới mua sắm trong tầm tay bạn</string>
    <string name="title_splash_1">Giao hàng tận nơi + thanh toán dễ dàng</string>
    <string name="title_splash_2">100% bảo vệ người tiêu dùng</string>
    <string name="hint_search">Tìm kiếm trên Lazada</string>
    <string name="title_gio_hang">Giỏ hàng</string>
    <string name="title_more">Thêm</string>
    <string name="title_login">Đăng nhập</string>
    <string name="title_login_reg">Đăng nhập / Đăng ký</string>
    <string name="title_reg">Đăng ký</string>
    <string name="title_noti">Thông báo</string>
    <string name="title_favorite">Danh sách mong muốn</string>
    <string name="title_fill_all">Cần điền tất cả các mục</string>
    <string name="title_order_list">Đơn hàng của tôi</string>
    <string name="title_settings">Cài đặt</string>
    <string name="title_privacy">Chính sách</string>
    <string name="title_help">Trợ giúp</string>
    <string name="title_open">Mở</string>
    <string name="title_close">Đống</string>
    <string name="title_facebook">Facebook</string>
    <string name="title_google">Google</string>
    <string name="title_recv_email">Tôi muốn nhận các khuyến mãi đọc quyền qua email</string>
    <string name="title_alternative_login">Hoặc đăng nhập bằng</string>
    <string name="title_alternative_reg">Hoặc đăng ký bằng</string>
    <string name="title_forget_password">Quên mật khẩu?</string>
    <string name="title_password_require">Mật khẩu phải bao gồm 6 ký tự và 1 chữ hoa</string>
    <string name="title_lazada_require">Tôi đã hiểu rõ các điều khoản bảo mật của Lazada</string>
    <string name="hint_email">Địa chỉ email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_re_password">Nhập lại mật khẩu</string>
    <string name="hint_full_name">Họ tên đầy đủ</string>
    <string name="error_re_password">Mật khẩu nhập lại không đúng.</string>
    <string name="msg_reg_success">Đăng ký thành công</string>
    <string name="msg_reg_fail">Đăng ký thất bại</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
