<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/itGioHang"
        android:title="@string/title_gio_hang"
        app:showAsAction="ifRoom"
        app:actionLayout="@layout/ic_gio_hang"
        />
    <item
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="@string/title_gio_hang"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/idLogin"
                android:icon="@drawable/ic_sentiment_satisfied_black_24dp"
                android:title="@string/title_login"/>
            <item
                android:id="@+id/itNoti"
                android:icon="@drawable/ic_notifications_none_black_24dp"
                android:title="@string/title_noti"/>
            <item
                android:id="@+id/itFavorite"
                android:icon="@drawable/ic_favorite_border_black_24dp"
                android:title="@string/title_favorite"/>
            <item
                android:id="@+id/itOrderList"
                android:icon="@drawable/ic_content_paste_black_24dp"
                android:title="@string/title_order_list"/>
            <item
                android:id="@+id/itSettings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/title_settings"/>
            <item
                android:id="@+id/itPrivacy"
                android:icon="@drawable/ic_event_note_black_24dp"
                android:title="@string/title_privacy"/>
            <item
                android:id="@+id/itHelp"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/title_help"/>
        </menu>
    </item>
</menu>