<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_16sdp"
    tools:context=".view.dangnhap.fragment.DangKyFragment"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_fill_all"
            android:textColor="@color/color_black"
            android:textStyle="bold"
            android:layout_margin="@dimen/_8sdp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/editFullName"
                android:hint="@string/hint_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/editEmail"
                android:hint="@string/hint_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp">
            <com.nhanhv.lazada.customview.PasswordEdittext
                android:id="@+id/editPassword"
                android:hint="@string/hint_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggle="true"
                app:errorEnable="true"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:text="@string/title_password_require"
            android:layout_margin="@dimen/_8sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputRePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp">
            <com.nhanhv.lazada.customview.PasswordEdittext
                android:id="@+id/editPasswordRe"
                android:hint="@string/hint_re_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggle="true"
                app:errorEnable="true"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switchEmail"
            android:text="@string/title_recv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_margin="@dimen/_8sdp"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonRegister"
            android:text="@string/title_reg"
            android:backgroundTint="@color/colorLazadaOrange"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/title_lazada_require"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"/>
        <TextView
            android:text="@string/title_alternative_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:layout_gravity="center"
            android:textColor="@color/color_black"/>

        <LinearLayout
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatButton
                android:text="@string/title_facebook"
                android:drawableLeft="@drawable/facebookiconsmall"
                android:background="@drawable/bg_facebook"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_4sdp"/>
            <android.support.v7.widget.AppCompatButton
                android:text="@string/title_google"
                android:drawableLeft="@drawable/googleplussmall"
                android:background="@drawable/bg_google"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
