<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/_16sdp"
    android:orientation="vertical"
    >
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.nhanhv.lazada.customview.ClearableEdittext
            android:hint="@string/hint_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:inputType="textEmailAddress"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.nhanhv.lazada.customview.PasswordEdittext
            android:hint="@string/hint_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:inputType="textPassword"
            app:passwordToggle="true"
            />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:text="@string/title_forget_password"
        android:textColor="@color/material_color_blue_400"
        android:textAlignment="textEnd"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.AppCompatButton
        android:text="@string/title_login"
        android:backgroundTint="@color/colorLazadaOrange"
        android:textColor="@color/color_white"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/title_alternative_login"
        android:textColor="@color/color_black"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatButton
            android:text="@string/title_facebook"
            android:drawableLeft="@drawable/facebookiconsmall"
            android:background="@drawable/bg_facebook"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_4sdp"/>
        <android.support.v7.widget.AppCompatButton
            android:text="@string/title_google"
            android:drawableLeft="@drawable/googleplussmall"
            android:background="@drawable/bg_google"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_4sdp"/>
    </LinearLayout>
</LinearLayout>