<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/backgroundplashscreen"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        android:gravity="center_horizontal"
        android:background="#60000000"
        >
        <ImageView
            android:src="@drawable/iconbag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_64sdp"/>
        <TextView
            android:text="@string/title_splash_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Title.Inverse"
            android:layout_marginTop="@dimen/_8sdp"
            />
        <ImageView
            android:src="@drawable/iconmoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"/>
        <TextView
            android:text="@string/title_splash_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Title.Inverse"
            android:layout_marginTop="@dimen/_8sdp"/>
        <ImageView
            android:src="@drawable/iconsercurity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"/>
        <TextView
            android:text="@string/title_splash_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Title.Inverse"
            android:layout_marginTop="@dimen/_8sdp"/>
    </LinearLayout>
    <ImageView
        android:src="@drawable/lazadacustomerlogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/_8sdp"
        />
</FrameLayout>
